--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,32 @@
 <!doctype html>
-<html lang="en">
+<html lang="fa">
+
 <head>
+
   <meta charset="utf-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
+
   <title>DynamicForm</title>
   <base href="/">
-  <meta name="viewport" content="width=device-width, initial-scale=1">
+
+  <meta name="description" content="">
+  <meta name="keywords" content="">
+  <meta name="author" content="MSK">
+
   <link rel="icon" type="image/x-icon" href="favicon.ico">
+
+  <link rel="preconnect" href="https://fonts.gstatic.com">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500&display=swap">
+  <link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons">
+
 </head>
-<body>
+
+<body class="mat-typography">
+
   <app-root></app-root>
+
+  <noscript>Please enable JavaScript to continue using this application.</noscript>
+
 </body>
+
 </html>
